# make_mcl_clusters

./: README.md  pyproject.toml  recipe.yaml
scripts/: __init__.py  analyze.py  arguments.py  cluster.py  main.py  mmseqs_utils.py  utils.py
scripts/amg/: amg.py
scripts/cluster/: analyze.py  cluster.py  mmseqs_cluster.py
scripts/gene_share/: gene_share.py
scripts/network/: diamond_network.py  dna_translator.py  mmseqs_network.py  network.py
src/: __init__.py  analyze.py  arguments.py  cluster.py  main.py
