[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "Mobile_clusters"
dynamic = ["version"]
description = "A package to create MCL clusters"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Muhammad Sulman", email = "sulmanmu40@gmail.com"}
]

dependencies = [
    "pandas>=2.0.0",
    "biopython>=1.84",
    "tqdm>=2.0.0",
    "matplotlib>=3.0.0"]

[project.scripts]
Mobile_clusters = "scripts.main:main"

[tool.setuptools]
packages = ["scripts"]

[tool.setuptools.dynamic]
version = {file = "VERSION"}
